[tool.poetry]
name = "meu-projeto-flask"
version = "0.1.0"
description = "Projeto Flask com SpaCy e conexão ao SQL Server"
authors = ["André demauriciojr@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
pyodbc = "^4.0.32"
spacy = "^3.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
